  113 Luca Falavigna	2008-12-02
      Implement lintian support as a module

  112 Luca Falavigna	2008-12-01
      Implement modules core components

  111 Luca Falavigna	2008-11-19
      Add acceptedqueue to allow packages waiting for
      a lock to be built if previously accepted.

  110 Luca Falavigna	2008-11-18
      Add files to packagequeue even if they are
      already available, so they can be removed

  109 Luca Falavigna	2008-08-07
      Build log is now saved with .buildlog extension

  108 Luca Falavigna	2008-08-07
      Add support for DEBOOTSTRAP pbuilder option

  107 Luca Falavigna	2008-08-07
      Move away from globals.py

  106 Luca Falavigna	2008-08-07
      Code reorganization, some files merged

  105 Luca Falavigna	2008-06-30
      Fix typos in documentation



Thu 2008-06-26 21:15:06 +0200
Stable release: 0.5

  104 Luca Falavigna	2008-06-26
      Makefile revisited

  103 Luca Falavigna	2008-06-25
      Relicense under GPL version 3

  102 Luca Falavigna	2008-06-25
      Remove linda support, software is obsolete

  101 Luca Falavigna	2008-04-28
      Documentation improved

  100 Luca Falavigna	2008-04-26
      Add Intrepid pbuilder configuration file, remove Gutsy one

   99 Luca Falavigna	2008-04-26
      Add missing options in debomatic.conf.5.docbook

   98 Luca Falavigna	2008-04-26
      Add CHANGES file

   97 Luca Falavigna	2008-03-19
      Remove GPG signature from publicly available .changes files

   96 Luca Falavigna	2008-03-16
      Added rm_package function

   95 Luca Falavigna	2008-03-16
      Add GPG support to check signed source.changes files

   94 Luca Falavigna	2008-03-16
      Add support for checks section in configure file

   93 Luca Falavigna	2008-03-04
      Check return status of the functions

   92 Luca Falavigna	2008-02-18
      Update copyright informations and FSF postal address

   91 Luca Falavigna	2008-02-17
      Download missing files from MIRRORSITE. This way it is no strictly