@@ -12,8 +12,13 @@
 <br>
 <br>
 <h3>Introduction</h3>
-<p>This is Deb-o-Matic, a easy to use build machine for Debian-based source packages based on pbuilder. It provides a simple tool to automate the build of  source packages with limited user interaction and a simple configuration.</p>
-<p>It has some useful feature such as automatic update of pbuilder, automatic scan and selection of source packages to build and lintian support. It is meant to help developers to build their packages without worrying too much of compilation, since it will run in background and no user feedback is required during the whole process.</p>
+<p>This is Deb-o-Matic, an easy to use build machine for Debian-based source
+packages based on pbuilder. It provides a simple tool to automate the build of
+source packages with limited user interaction and a simple configuration.</p>
+<p>It has some useful feature such as automatic update of pbuilder and automatic
+scan and selection of source packages to build. It is meant to help developers
+to build their packages without worrying too much of compilation, since it will
+run in background and no user feedback is required during the whole process.</p>
 <h3>Requisites</h3>
 These packages are required to build and install Deb-o-Matic on your system:
 <ul>
@@ -32,35 +37,74 @@ To enable additional features, you may want to install these packages:
 <li>gnupg</li>
 <li>lintian</li>
 </ul>
-<p>A Internet connection is also required, broadband access is recommended since debootstrap will fetch several packages from internet to set up pbuilder chroot environment.</p>
+<p>A Internet connection is also required, broadband access is recommended because
+debootstrap will fetch several packages from the Internet to set up pbuilder
+chroot environment.</p>
 <h3>Installation and removal</h3>
 <p>Installation process is straightforward, just execute these commands:
 <br>
 <i>make</i>
 <br>
 <i>make install</i> (with root privileges)</p>
-<p>You will find debomatic executable in /usr/bin, modules in /usr/lib/python*/site-packages/Debomatic (based on your Python version) and related manpages in /usr/share/man/ directory.</p>
-<p>In order to uninstall Deb-o-Matic, you need to launch <i>make uninstall</i> (with root privileges).</p>
+<p>You will find debomatic executable into /usr/bin, modules into
+/usr/lib/python*/site-packages/Debomatic (based on your Python version),
+modules in /usr/share/debomatic/modules and related manpages into
+/usr/share/man/ directory.</p>
+<p>In order to uninstall Deb-o-Matic, you need to launch make uninstall
+(again, with root privileges).</p>
 <h3>Configuration</h3>
-<p>In order to get Deb-o-Matic working, you have to prepare a configuration file which will provide the options needed to run debomatic. You can look at
+<p>In order to have Deb-o-Matic working, you have to prepare a configuration file
+which will provide the options needed to run debomatic. You can look at
 examples/debomatic.conf to see a working example.</p>
-<p>The most important options are located under <i>default</i> section: here are some of them:
+<p>The most important options are located under <i>default</i> section: here are some:</p>
 <ul>
 <li>packagedir: base directory where debomatic will scan for packages to build
-<li>configdir: place where pbuilder configuration files used to pass build options to pbuilder are stored
+<li>configdir: directory where pbuilder configuration files used to pass build
+    options to pbuilder are stored
 <li>maxbuilds: maximum number of parallel builds allowed
 </ul>
 <p>See debomatic.conf man page for a complete list of the available options.</p>
-<p>Once main configuration file is complete, you must create the directories referenced by packagedir and configdir, where you will put pbuilder configuration files. Working examples are located in <i>examples</i> directory. Names must match target distribution you want to build packages for (e.g. if you want to build a package for Intrepid, pbuilder configuration filename must be <i>intrepid</i>).</p>
+<p>Once main configuration file is complete, you must create the directories
+referenced by packagedir and configdir, where you will put pbuilder
+configuration files. Working examples are located into <i>examples</i> directory.
+Names must match target distribution you want to build packages for (e.g. if
+you want to build a package for Jaunty, pbuilder configuration filename must be
+jaunty). They should be the same as the ones provided by debootstrap.</p>
 <p>See pbuilderrc man page for a complete list of the available options.</p>
 <h3>Running Deb-o-Matic</h3>
-<p> To start Deb-o-Matic, you have to launch <i>debomatic -c debomatic.conf</i> command (where debomatic.conf is your main configuration file). You need root privileges to do so because of pbuilder infrastructure. This will start debomatic in daemon mode, use <i>-n</i> switch to avoid this.</p>
-<p>Now you can put source packages in the chosen package directory (identified by packagedir option) and Deb-o-Matic will take care of the building phase. Since Deb-o-Matic requires .changes files, be sure to generate a full Debian source package by using a command such as dpkg-buildpackage -S -sa. You have to upload .changes file and each file mentioned under its Files section. You may want to use software like <i>dput</i> to automate the process.</p>
+<p>To start Deb-o-Matic, you have to launch debomatic -c debomatic.conf command
+(where debomatic.conf is your main configuration file). You need root
+privileges to do so because of pbuilder infrastructure. This will start
+debomatic in daemon mode, use <i>-n</i> switch to avoid this.</p>
+<p>Now you can put source packages in the chosen package directory (identified by
+packagedir option) and Deb-o-Matic will take care of the building phase.
+Deb-o-Matic requires .changes files, be sure to generate a full Debian source
+package by using a command such as dpkg-buildpackage -S -sa. You have to upload
+.changes file and each file mentioned under its Files section. You may want to
+use software like <i>dput</i> to automate the process.
+A source upload is required, other type of .changes files could not be parsed
+correctly leading to a ignored build.</p>
+<p>A source upload is required, other type of .changes files could not be parsed
+correctly leading to a ignored build.</p>
 <h5>GPG support</h5>
-<p>Deb-o-Matic support GPG-signed source packages to allow build for authorized people only. To enable GPG support, you need to set options in <i>gpg</i> section in main configuration file. Only packages signed with keys present in keyring pointed by the correspondant option will be processed, unknown packages will be deleted automatically.</p>
+<p>Deb-o-Matic support GPG-signed source packages to allow build for authorized
+people only. To enable GPG support, you need to set options in "gpg" section in
+main configuration file. Only packages signed with keys present in keyring
+pointed by the correspondent option will be processed, unknown packages will be
+deleted automatically.</p>
 <h5>Advice on how to prepare source packages</h5>
-<p>Deb-o-Matic can fetch .orig.tar.gz files automatically if already available on main distribution archive (e.g. <a href="http://archive.ubuntu.com/ubuntu">http://archive.ubuntu.com/ubuntu</a>), so you can choose not to include .orig.tar.gz sometimes. You always need to include it in case of new upstream version or new packages.</p>
+<p>Deb-o-Matic can fetch .orig.tar.gz files automatically if already available on
+main distribution archive (e.g. <a href="http://archive.ubuntu.com/ubuntu">
+http://archive.ubuntu.com/ubuntu</a>), so you can choose not to include
+.orig.tar.gz sometimes. You always need to include it in case of new upstream
+version or new packages.</p>
+<h3>Modules</h3>
+<p>Deb-o-Matic provides modules support. Modules are Python scripts pluggable at
+runtime which extend Deb-o-Matic features. Available modules are stored into
+modules directory. An example module can be found into examples directory,
+useful to write your own Deb-o-Matic module.</p>
 <h3>Bugs and feedback</h3>
-<p>If you want to report a bug or a feature, please visit Deb-o-Matic homepage at <a href="https://launchpad.net/debomatic">https://launchpad.net/debomatic</a>.</p>
+<p>If you want to report a bug or a feature, please visit Deb-o-Matic homepage at
+<a href="https://launchpad.net/debomatic">https://launchpad.net/debomatic</a>.</p>
 </body>
 </html>
